--- a/note_slopes.ipynb
+++ b/note_slopes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -10,7 +10,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import re, os"
+    "import re, os, random"
    ]
   },
   {
@@ -67,10 +67,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 66,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_slope_bounds(lst):\n",
@@ -82,26 +80,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "expected string or bytes-like object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-54-4103d7e0144d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'C8'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'C8'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'C8'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.9\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mavgmaxslope\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-54-4103d7e0144d>\u001b[0m in \u001b[0;36mavgmaxslope\u001b[0;34m(exp)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mmax_asc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin_desc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mnote_dist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m             \u001b[0mmax_asc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_asc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnote_dist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mnote_dist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-48-de39ffccfba6>\u001b[0m in \u001b[0;36mnote_dist\u001b[0;34m(note1, note2)\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mnote_dist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnote1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnote2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;31m# positive if note2 is above note1, 0 if same\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m     \u001b[0mnote1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moctave1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msplit_note\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnote1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m     \u001b[0mnote2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moctave2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msplit_note\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnote2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mnote1\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msame_note\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-48-de39ffccfba6>\u001b[0m in \u001b[0;36msplit_note\u001b[0;34m(note)\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msplit_note\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnote\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfullmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'[A-G](#|b)?[0-7]'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnote\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'Note not formatted correctly: %s'\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0mnote\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mnote\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnote\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/josephnguyen/anaconda/lib/python3.6/re.py\u001b[0m in \u001b[0;36mfullmatch\u001b[0;34m(pattern, string, flags)\u001b[0m\n\u001b[1;32m    175\u001b[0m     \"\"\"Try to apply the pattern to all of the string, returning\n\u001b[1;32m    176\u001b[0m     a match object, or None if no match was found.\"\"\"\n\u001b[0;32m--> 177\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_compile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfullmatch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstring\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    178\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0msearch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpattern\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstring\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mflags\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: expected string or bytes-like object"
-     ]
-    }
-   ],
+   "source": [
+    "### Average Max Slope"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def avgmaxslope(exp):\n",
     "    max_asc, min_desc = 0,0\n",
@@ -112,20 +101,101 @@
     "            min_desc = min(min_desc, note_dist(exp[i], exp[i+1]))\n",
     "    return str(min_asc) + ' ' + str(max_desc)\n",
     "\n",
-    "test = [('C8', 0.5), ('C8', 0.9), ('C8', 0.9)]\n",
-    "print(avgmaxslope(test))"
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Consonance"
+    "### Selecting Notes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def select_note(lst, curr, minimum, maximum):\n",
+    "    #1: output of the possible notes\n",
+    "    #2: current note ('C4')\n",
+    "    #3: minimum slope\n",
+    "    #4: maximum slope\n",
+    "    #output single note from filtered list; else random of unfiltered list\n",
+    "    master_lst, lower_octave, equal_octave, higher_octave = [], [], [], []\n",
+    "    for key in lst:\n",
+    "        lower_octave.append(split_note(key)[0] + str((split_note(key)[1]) - 1))\n",
+    "        equal_octave.append(split_note(key)[0] + str(split_note(key)[1]))\n",
+    "        higher_octave.append(split_note(key)[0] + str((split_note(key)[1]) + 1))\n",
+    "    for value in lower_octave:\n",
+    "        if note_dist(value, curr) >= minimum:\n",
+    "            master_lst.append(value)\n",
+    "    for value in equal_octave:\n",
+    "        if note_dist(value, curr) >= minimum:\n",
+    "            master_lst.append(value)\n",
+    "        if note_dist(value, curr) <= maximum:\n",
+    "            master_lst.append(value)\n",
+    "    for value in lower_octave:\n",
+    "        if note_dist(value, curr) <= maximum:\n",
+    "            master_lst.append(value)\n",
+    "    if len(master_lst) == 0:\n",
+    "        return random.choice(lst)\n",
+    "    else:\n",
+    "        return random.choice(master_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('C', 4)\n",
+      "C\n",
+      "4\n",
+      "C3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'G2'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#TESTS\n",
+    "\n",
+    "\n",
+    "#key = 'C4'\n",
+    "#print(split_note(key))\n",
+    "#print(split_note(key)[0])\n",
+    "#print(split_note(key)[1])\n",
+    "#value = (split_note(key)[0] + str((split_note(key)[1]) - 1))\n",
+    "#print(value)\n",
+    "\n",
+    "#select_note(['G3', 'F#3'], 'C4', 5, 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Determining Consonance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +217,8 @@
     "    return total #total consonance value for that measure\n",
     "\n",
     "#test = [('C8', 0.5), ('C8', 0.9), ('C8', 0.9)]\n",
-    "#print(consonance(test))\n"
+    "#print(consonance(test)\n",
+    "\n"
    ]
   },
   {
