--- a/midi_to_csv/chords_column.ipynb
+++ b/midi_to_csv/chords_column.ipynb
@@ -21,7 +21,8 @@
    },
    "outputs": [],
    "source": [
-    "ben_csv = pd.read_csv('WebsterNight.csv')"
+    "ben_csv = pd.read_csv('WebsterNight.csv')\n",
+    "ben_csv['start_time'] = ben_csv['start_time'] - 5.9375"
    ]
   },
   {
@@ -52,16 +53,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['G#m7b5'], ['G-7'], ['F#-7'], ['Fo'], ['E-7'], ['A7'], ['D6'], ['E7', 'A7']]"
+       "[['Dj7'],\n",
+       " ['Dj7'],\n",
+       " ['G#m7b5'],\n",
+       " ['G-7'],\n",
+       " ['F#-7'],\n",
+       " ['Fo'],\n",
+       " ['E-7'],\n",
+       " ['A7'],\n",
+       " ['D6'],\n",
+       " ['E7', 'A7']]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,12 +87,26 @@
     "\n",
     "ben_chords = process_raw_chords(ben_chords_raw)\n",
     "assert len(ben_chords) == 48\n",
-    "ben_chords[40:]"
+    "ben_chords[:10]\n",
+    "ben_chords[-10:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# measure_to_chord = lambda st: ben_chords[int(st) % len(ben_chords)][0]\n",
+    "def measure_to_chord(start_time, all_chords=ben_chords):\n",
+    "    chords = all_chords[int(start_time) % len(ben_chords)]\n",
+    "    return chords[int((start_time % 1) / (1.0 / len(chords)))]\n",
+    "ben_csv['chord'] = ben_csv['start_time'].apply(measure_to_chord)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -110,515 +134,70 @@
        "      <th>start_time</th>\n",
        "      <th>duration</th>\n",
        "      <th>velocity</th>\n",
+       "      <th>chord</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>F4</td>\n",
-       "      <td>6.062500</td>\n",
+       "      <td>0.125000</td>\n",
        "      <td>0.154948</td>\n",
        "      <td>94</td>\n",
+       "      <td>Em7b5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>A4</td>\n",
-       "      <td>6.227865</td>\n",
+       "      <td>0.290365</td>\n",
        "      <td>0.725260</td>\n",
        "      <td>95</td>\n",
+       "      <td>Em7b5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>B4</td>\n",
-       "      <td>7.615885</td>\n",
+       "      <td>1.678385</td>\n",
        "      <td>0.339844</td>\n",
        "      <td>96</td>\n",
+       "      <td>A7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>C#5</td>\n",
-       "      <td>7.973958</td>\n",
+       "      <td>2.036458</td>\n",
        "      <td>0.174479</td>\n",
        "      <td>115</td>\n",
+       "      <td>Dj7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>B4</td>\n",
-       "      <td>8.192708</td>\n",
+       "      <td>2.255208</td>\n",
        "      <td>0.164062</td>\n",
        "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>8.380208</td>\n",
-       "      <td>0.195312</td>\n",
-       "      <td>109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>F#4</td>\n",
-       "      <td>8.605469</td>\n",
-       "      <td>0.242188</td>\n",
-       "      <td>102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>F4</td>\n",
-       "      <td>8.850260</td>\n",
-       "      <td>0.079427</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>F#4</td>\n",
-       "      <td>8.941406</td>\n",
-       "      <td>0.243490</td>\n",
-       "      <td>97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>10.108073</td>\n",
-       "      <td>0.072917</td>\n",
-       "      <td>109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>A#4</td>\n",
-       "      <td>10.200521</td>\n",
-       "      <td>0.130208</td>\n",
-       "      <td>112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>C5</td>\n",
-       "      <td>10.345052</td>\n",
-       "      <td>0.184896</td>\n",
-       "      <td>111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>G5</td>\n",
-       "      <td>10.593750</td>\n",
-       "      <td>0.091146</td>\n",
-       "      <td>118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>F5</td>\n",
-       "      <td>10.694010</td>\n",
-       "      <td>0.138021</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>10.845052</td>\n",
-       "      <td>0.088542</td>\n",
-       "      <td>106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>10.933594</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>11.304688</td>\n",
-       "      <td>0.100260</td>\n",
-       "      <td>117</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>C#5</td>\n",
-       "      <td>11.420573</td>\n",
-       "      <td>0.138021</td>\n",
-       "      <td>111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>B4</td>\n",
-       "      <td>11.640625</td>\n",
-       "      <td>0.149740</td>\n",
-       "      <td>93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>C#5</td>\n",
-       "      <td>11.815104</td>\n",
-       "      <td>0.147135</td>\n",
-       "      <td>115</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>B4</td>\n",
-       "      <td>12.052083</td>\n",
-       "      <td>0.070312</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>12.138021</td>\n",
-       "      <td>0.182292</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>12.381510</td>\n",
-       "      <td>0.164062</td>\n",
-       "      <td>112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>B4</td>\n",
-       "      <td>12.571615</td>\n",
-       "      <td>0.264323</td>\n",
-       "      <td>83</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>13.537760</td>\n",
-       "      <td>0.082031</td>\n",
-       "      <td>111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>B4</td>\n",
-       "      <td>13.627604</td>\n",
-       "      <td>0.108073</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>13.781250</td>\n",
-       "      <td>0.076823</td>\n",
-       "      <td>113</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>F5</td>\n",
-       "      <td>13.876302</td>\n",
-       "      <td>0.132812</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>F#5</td>\n",
-       "      <td>14.023438</td>\n",
-       "      <td>0.083333</td>\n",
-       "      <td>123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>F5</td>\n",
-       "      <td>14.117188</td>\n",
-       "      <td>0.118490</td>\n",
-       "      <td>112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>345</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>92.295573</td>\n",
-       "      <td>0.121094</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>346</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>92.440104</td>\n",
-       "      <td>0.087240</td>\n",
-       "      <td>119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>347</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>92.539062</td>\n",
-       "      <td>0.157552</td>\n",
-       "      <td>97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>348</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>92.712240</td>\n",
-       "      <td>0.180990</td>\n",
-       "      <td>107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>349</th>\n",
-       "      <td>F#5</td>\n",
-       "      <td>92.955729</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>350</th>\n",
-       "      <td>F#5</td>\n",
-       "      <td>93.234375</td>\n",
-       "      <td>0.072917</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>351</th>\n",
-       "      <td>F5</td>\n",
-       "      <td>93.317708</td>\n",
-       "      <td>0.098958</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>352</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>93.454427</td>\n",
-       "      <td>0.169271</td>\n",
-       "      <td>112</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>353</th>\n",
-       "      <td>F5</td>\n",
-       "      <td>93.854167</td>\n",
-       "      <td>0.199219</td>\n",
-       "      <td>116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>354</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>94.955729</td>\n",
-       "      <td>0.259115</td>\n",
-       "      <td>107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>355</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>95.234375</td>\n",
-       "      <td>0.207031</td>\n",
-       "      <td>123</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>356</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>95.446615</td>\n",
-       "      <td>0.179688</td>\n",
-       "      <td>127</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>357</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>95.684896</td>\n",
-       "      <td>0.071615</td>\n",
-       "      <td>108</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>358</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>95.769531</td>\n",
-       "      <td>0.256510</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>359</th>\n",
-       "      <td>D#5</td>\n",
-       "      <td>96.027344</td>\n",
-       "      <td>0.136719</td>\n",
-       "      <td>100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>360</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>96.169271</td>\n",
-       "      <td>0.223958</td>\n",
-       "      <td>110</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>361</th>\n",
-       "      <td>C#5</td>\n",
-       "      <td>96.683594</td>\n",
-       "      <td>0.153646</td>\n",
-       "      <td>119</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>362</th>\n",
-       "      <td>C#5</td>\n",
-       "      <td>96.977865</td>\n",
-       "      <td>0.111979</td>\n",
-       "      <td>107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>363</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>97.134115</td>\n",
-       "      <td>0.114583</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>364</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>97.303385</td>\n",
-       "      <td>0.234375</td>\n",
-       "      <td>102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>365</th>\n",
-       "      <td>B4</td>\n",
-       "      <td>98.244792</td>\n",
-       "      <td>0.157552</td>\n",
-       "      <td>90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>366</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>98.421875</td>\n",
-       "      <td>0.243490</td>\n",
-       "      <td>102</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>367</th>\n",
-       "      <td>D5</td>\n",
-       "      <td>98.684896</td>\n",
-       "      <td>0.514323</td>\n",
-       "      <td>104</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>368</th>\n",
-       "      <td>A#4</td>\n",
-       "      <td>99.277344</td>\n",
-       "      <td>0.170573</td>\n",
-       "      <td>96</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>369</th>\n",
-       "      <td>E4</td>\n",
-       "      <td>99.945312</td>\n",
-       "      <td>0.074219</td>\n",
-       "      <td>111</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>370</th>\n",
-       "      <td>F#4</td>\n",
-       "      <td>100.027344</td>\n",
-       "      <td>0.151042</td>\n",
-       "      <td>105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>371</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>100.201823</td>\n",
-       "      <td>0.091146</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>372</th>\n",
-       "      <td>B4</td>\n",
-       "      <td>100.302083</td>\n",
-       "      <td>0.079427</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>373</th>\n",
-       "      <td>A4</td>\n",
-       "      <td>100.429688</td>\n",
-       "      <td>0.089844</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>374</th>\n",
-       "      <td>F#4</td>\n",
-       "      <td>100.545573</td>\n",
-       "      <td>0.134115</td>\n",
-       "      <td>93</td>\n",
+       "      <td>Dj7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>375 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    note_name  start_time  duration  velocity\n",
-       "0          F4    6.062500  0.154948        94\n",
-       "1          A4    6.227865  0.725260        95\n",
-       "2          B4    7.615885  0.339844        96\n",
-       "3         C#5    7.973958  0.174479       115\n",
-       "4          B4    8.192708  0.164062        92\n",
-       "5          A4    8.380208  0.195312       109\n",
-       "6         F#4    8.605469  0.242188       102\n",
-       "7          F4    8.850260  0.079427        98\n",
-       "8         F#4    8.941406  0.243490        97\n",
-       "9          A4   10.108073  0.072917       109\n",
-       "10        A#4   10.200521  0.130208       112\n",
-       "11         C5   10.345052  0.184896       111\n",
-       "12         G5   10.593750  0.091146       118\n",
-       "13         F5   10.694010  0.138021       114\n",
-       "14         D5   10.845052  0.088542       106\n",
-       "15         E5   10.933594  0.333333       111\n",
-       "16         D5   11.304688  0.100260       117\n",
-       "17        C#5   11.420573  0.138021       111\n",
-       "18         B4   11.640625  0.149740        93\n",
-       "19        C#5   11.815104  0.147135       115\n",
-       "20         B4   12.052083  0.070312        95\n",
-       "21         A4   12.138021  0.182292       105\n",
-       "22         D5   12.381510  0.164062       112\n",
-       "23         B4   12.571615  0.264323        83\n",
-       "24         A4   13.537760  0.082031       111\n",
-       "25         B4   13.627604  0.108073       105\n",
-       "26         D5   13.781250  0.076823       113\n",
-       "27         F5   13.876302  0.132812       116\n",
-       "28        F#5   14.023438  0.083333       123\n",
-       "29         F5   14.117188  0.118490       112\n",
-       "..        ...         ...       ...       ...\n",
-       "345        E5   92.295573  0.121094       116\n",
-       "346        D5   92.440104  0.087240       119\n",
-       "347        A4   92.539062  0.157552        97\n",
-       "348        D5   92.712240  0.180990       107\n",
-       "349       F#5   92.955729  0.250000       103\n",
-       "350       F#5   93.234375  0.072917       116\n",
-       "351        F5   93.317708  0.098958       108\n",
-       "352        D5   93.454427  0.169271       112\n",
-       "353        F5   93.854167  0.199219       116\n",
-       "354        A4   94.955729  0.259115       107\n",
-       "355        E5   95.234375  0.207031       123\n",
-       "356        E5   95.446615  0.179688       127\n",
-       "357        D5   95.684896  0.071615       108\n",
-       "358        E5   95.769531  0.256510       114\n",
-       "359       D#5   96.027344  0.136719       100\n",
-       "360        D5   96.169271  0.223958       110\n",
-       "361       C#5   96.683594  0.153646       119\n",
-       "362       C#5   96.977865  0.111979       107\n",
-       "363        E5   97.134115  0.114583       114\n",
-       "364        A4   97.303385  0.234375       102\n",
-       "365        B4   98.244792  0.157552        90\n",
-       "366        D5   98.421875  0.243490       102\n",
-       "367        D5   98.684896  0.514323       104\n",
-       "368       A#4   99.277344  0.170573        96\n",
-       "369        E4   99.945312  0.074219       111\n",
-       "370       F#4  100.027344  0.151042       105\n",
-       "371        A4  100.201823  0.091146       101\n",
-       "372        B4  100.302083  0.079427        78\n",
-       "373        A4  100.429688  0.089844        95\n",
-       "374       F#4  100.545573  0.134115        93\n",
-       "\n",
-       "[375 rows x 4 columns]"
+       "  note_name  start_time  duration  velocity  chord\n",
+       "0        F4    0.125000  0.154948        94  Em7b5\n",
+       "1        A4    0.290365  0.725260        95  Em7b5\n",
+       "2        B4    1.678385  0.339844        96     A7\n",
+       "3       C#5    2.036458  0.174479       115    Dj7\n",
+       "4        B4    2.255208  0.164062        92    Dj7"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ben_csv"
+    "ben_csv.head()"
    ]
   }
  ],
